Add network-id to openapi.yaml
FIXES=b/308682784

Reviewed-on: https://gke-internal-review.googlesource.com/c/third_party/cilium/+/950768
Tested-by: Prow_Bot_V2 <425329972751-compute@developer.gserviceaccount.com>
Unit-Verified: Prow_Bot_V2 <425329972751-compute@developer.gserviceaccount.com>
Lint: Lint 🤖 <android-build-ayeaye@system.gserviceaccount.com>
